refactor: Update to Material Symbols Outlined icons

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
         <div class="product-grid">
           <div class="product-card">
             <button class="wishlist">
-              <span class="material-icons-outlined">favorite_border</span>
+              <span class="material-symbols-outlined">favorite_border</span>
             </button>
 
             <div class="product-image">
@@ -44,7 +44,7 @@
 
           <div class="product-card">
             <button class="wishlist">
-              <span class="material-icons-outlined">favorite_border</span>
+              <span class="material-symbols-outlined">favorite_border</span>
             </button>
 
             <div class="product-image">
@@ -62,7 +62,7 @@
 
           <div class="product-card">
             <button class="wishlist">
-              <span class="material-icons-outlined">favorite_border</span>
+              <span class="material-symbols-outlined">favorite_border</span>
             </button>
 
             <div class="product-image">
@@ -93,19 +93,19 @@
 
         <div class="spec-grid">
           <div class="spec-card free-shipping">
-            <span class="material-icons-outlined">local_shipping</span>
+            <span class="material-symbols-outlined">local_shipping</span>
             <h3>Free Shipping</h3>
             <p>On all orders over $50</p>
           </div>
 
           <div class="spec-card support">
-            <span class="material-icons-outlined">support_agent</span>
+            <span class="material-symbols-outlined">support_agent</span>
             <h3>24/7 Support</h3>
             <p>We're here to help, anytime</p>
           </div>
 
           <div class="spec-card easy-returns">
-            <span class="material-icons-outlined">autorenew</span>
+            <span class="material-symbols-outlined">autorenew</span>
             <h3>Easy Returns</h3>
             <p>30-day money-back guarantee</p>
           </div>
