refactor: Update footer script to type module

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>sahara</title>
     <link rel="stylesheet" href="/css/main.css" />
     <script type="module" src="/js/header.js"></script>
+    <script type="module" src="/js/footer.js"></script>
     <script defer src="/js/hero.js"></script>
     <script defer src="/js/newsletter.js"></script>
-    <script defer src="/js/footer.js"></script>
   </head>
   <body>
     <div id="header"></div>
