--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,7 @@
     <title>Sahara | About</title>
     <link rel="stylesheet" href="/css/main.css" />
     <script type="module" src="/js/header.js"></script>
-    <script defer src="/js/footer.js"></script>
+    <script type="module" src="/js/footer.js"></script>
   </head>
   <body>
     <div id="header"></div>
@@ -22,8 +22,5 @@
     </main>
 
     <div id="footer"></div>
-
-    <script type="module" src="/js/header.js"></script>
-    <script src="/js/footer.js"></script>
   </body>
 </html>
